feat: 集成算法服务并修复Java 8兼容性问题
## 新增功能
- 集成4个算法服务（人脸替换、唇形同步、声音克隆、声音合成）
- 添加VideoProcessingService核心流程编排服务
- 添加AlgorithmCallbackController接收异步回调
- 支持模板配置化的视频生成流程

## 算法服务
- FaceSwapService: 人脸替换（需鉴权）
- LipSyncService: 唇形同步（需鉴权）
- VoiceCloneService: 声音克隆（无需鉴权）
- VoiceTtsService: 声音合成（无需鉴权）

## Java 8兼容性修复
- 替换Map.of()为HashMap
- 替换List.of()为Arrays.asList()
- 修复switch表达式为传统switch语句
- 修复匿名内部类diamond operator问题
- LambdaQueryWrapper改为LambdaUpdateWrapper（update操作）
- 修复HashMap初始化语法

## 配置更新
- 添加algorithm服务配置到application.yml
- 添加@Builder注解到Spring2026CreationRecord
- 添加AlgorithmProperties配置类

## 文档
- ALGORITHM_INTEGRATION.md: 算法接口集成说明
- COMPILATION_FIX_SUMMARY.md: 编译错误修复总结

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>