@@ -1,9 +1,11 @@
 package org.example.newyear.service;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.fasterxml.jackson.core.type.TypeReference;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.example.newyear.common.BusinessCode;
 import org.example.newyear.common.Constants;
 import org.example.newyear.entity.Spring2026Template;
 import org.example.newyear.exception.BusinessException;
@@ -11,6 +13,8 @@ import org.example.newyear.mapper.Spring2026TemplateMapper;
 import org.example.newyear.util.JsonUtil;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -63,23 +67,23 @@ public class TemplateService {
         Spring2026Template template = getTemplateById(templateId);
 
         if (template.getTaskConfig() == null || template.getTaskConfig().isEmpty()) {
-            // 默认配置
-            return Map.of(
-                    "steps", List.of("faceSwap", "lipSync"),
-                    "estimated_time", 120
-            );
+            // 默认配置（Java 8兼容）
+            Map<String, Object> defaultConfig = new HashMap<>();
+            defaultConfig.put("steps", Arrays.asList("faceSwap", "lipSync"));
+            defaultConfig.put("estimated_time", 120);
+            return defaultConfig;
         }
 
         try {
-            return JsonUtil.fromJson(template.getTaskConfig(), new TypeReference<>() {
+            return JsonUtil.fromJson(template.getTaskConfig(), new TypeReference<Map<String, Object>>() {
             });
         } catch (Exception e) {
             log.error("解析任务配置失败: templateId={}, config={}", templateId, template.getTaskConfig(), e);
-            // 返回默认配置
-            return Map.of(
-                    "steps", List.of("faceSwap", "lipSync"),
-                    "estimated_time", 120
-            );
+            // 返回默认配置（Java 8兼容）
+            Map<String, Object> defaultConfig = new HashMap<>();
+            defaultConfig.put("steps", Arrays.asList("faceSwap", "lipSync"));
+            defaultConfig.put("estimated_time", 120);
+            return defaultConfig;
         }
     }
 
@@ -88,7 +92,7 @@ public class TemplateService {
      */
     public void incrementUsedTimes(String templateId) {
         templateMapper.update(null,
-                new LambdaQueryWrapper<Spring2026Template>()
+                new LambdaUpdateWrapper<Spring2026Template>()
                         .eq(Spring2026Template::getTemplateId, templateId)
                         .setSql("used_times = used_times + 1")
         );
